test/Fail/Issue6287-1.agda
{-# OPTIONS --erased-cubical #-}

open import Issue6287-1.Cubical

_ : ⊤
_ = _
