test/Fail/Issue6287-1.err
Issue6287-1.agda:6.5-6: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue6287-1.agda:6.5-6
